test/tests/stages/16_characters_and_strings/invalid_types/implicit_conversion_between_char_pointers.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: c
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Char: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: s
                  CSingleInit: 
                    CVar: 
                      TIdentifier: c
                      None: 
                    None: 
                  Pointer: 
                    SChar: 
                  None: 
            CS: 
              CReturn: 
                CCast: 
                  CVar: 
                    TIdentifier: s
                    None: 
                  Int: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
